--- a/launchmon/src/rm_bglrm.conf
+++ b/launchmon/src/rm_bglrm.conf
@@ -53,5 +53,5 @@ RM_launcher_id=RM_launcher|sym|mpirun.cc
 RM_launch_helper=mpir
 RM_signal_for_kill=SIGINT
 RM_fail_detection=false
-RM_launch_str=--lmonsharedsec=%s --lmonsecchk=%c
+RM_launch_str=%o --lmonsharedsec=%s --lmonsecchk=%c
 
