--- a/launchmon/src/rm_bgprm.conf
+++ b/launchmon/src/rm_bgprm.conf
@@ -43,7 +43,7 @@
 ## RM_launcher_helper= method or command to launch daemons
 ## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
-RM=bglrm
+RM=bgprm
 RM_MPIR=STD_COLOC
 RM_launcher=mpirun64
 RM_launcher=mpirun32
@@ -52,5 +52,5 @@ RM_launcher_id=RM_launcher|sym|mpirun.cc
 RM_launch_helper=mpir
 RM_signal_for_kill=SIGINT
 RM_fail_detection=false
-RM_launch_str=--lmonsharedsec=%s --lmonsecchk=%c
+RM_launch_str=%o --lmonsharedsec=%s --lmonsecchk=%c
 
