--- a/launchmon/src/rm_bgqrm.conf
+++ b/launchmon/src/rm_bgqrm.conf
@@ -54,4 +54,4 @@ RM_launcher_so=librunjob_client.so.1
 RM_launch_helper=mpir
 RM_signal_for_kill=SIGINT
 RM_fail_detection=false
-RM_launch_str=--lmonsharedsec=%s --lmonsecchk=%c
+RM_launch_str=%o --lmonsharedsec=%s --lmonsecchk=%c
