--- a/test/src/test.attach_4_kill.in
+++ b/test/src/test.attach_4_kill.in
@@ -41,12 +41,6 @@
 RM_TYPE=@TEST_RMTP@
 NUMNODES=@NNODES@
 
-#if test "x$RM_TYPE" = "xbgrm" ; then
-#  rm -f nohup.out
-#  echo "[LMON FE] Test Not Implemented Yet"
-#  exit 1
-#fi
-
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 WAITAMOUNT=$NUMNODES 
 if test $NUMNODES -lt 10 ; then
@@ -60,7 +54,7 @@ export LMON_FE_KILL_TEST=1
 
 if test "x$RM_TYPE" = "xRC_slurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xRC_bgrm" ; then 
+elif test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then
   $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 elif test "x$RM_TYPE" = "xRC_alps" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
