--- a/test/src/test.launch_1.in
+++ b/test/src/test.launch_1.in
@@ -33,7 +33,7 @@
 #  Update Log:
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Mar 06 2009 DHA: NUMTASKS=32
-RM_TYPE=@RMTP@Changed bglrm to bgrm
+#        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 13 2008 DHA: Created file.
 #
@@ -45,7 +45,7 @@ export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 
 NUMNODES=@NNODES@
 NOHUP=""
-if test "x$RM_TYPE" = "xRC_bgrm" ; then
+if test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then
   NOHUP=nohup
   rm -f nohup.out
 fi
