--- a/launchmon/src/rm_bgq_slurm.conf
+++ b/launchmon/src/rm_bgq_slurm.conf
@@ -1,6 +1,6 @@
 ## $Header: $
 ##
-## rm_info.conf
+## rm_bgprm.conf
 ##
 ##--------------------------------------------------------------------------------
 ## Copyright (c) 2008, Lawrence Livermore National Security, LLC. Produced at
@@ -28,32 +28,30 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
-##        Sep 30 2011 DHA: Created file.
+##        Oct 3 2011 DHA: Created file.
 ##
 ##
-## [platform]
-## config file for each supported RM
+## RM: the name of Resource Manager
+## RM_launcher: the name of the launcher command
+## RM_launcher_id: the rule to get the launcher id
+## (e.g., RM_launcher|sym|srun says the launcher is identify by testing 
+##        RM_launcher's symbol by the name of srun)
+## RM_jobid: the rule to get the target jobid
+## (e.g., RM_jobid=RM_launcher|sym|totalview_jobid|string says
+##        jobid can be obtained from the launcher's symbol, totalview_jobid,
+##        interpreting that as the string type.
+## RM_launcher_helper= method or command to launch daemons
+## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 
-[linux-x86]
-rm_slurm.conf
-rm_openrte.conf
-rm_mchecker.conf
-
-[linux-x86_64]
-rm_slurm.conf
-rm_openrte.conf
-rm_alps.conf
-rm_mchecker.conf
-
-[linux-power]
-rm_bglrm.conf
-rm_bgprm.conf
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
-
-[linux-power64]
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
+RM=bgq_slurm
+RM_MPIR=STD_COLOC
+RM_launcher=srun
+RM_launcher=start_tool
+RM_launcher_id=RM_launcher|sym|srun
+RM_launcher_id=RM_launcher|sym|runjob::tool::Daemon::Daemon()
+RM_launcher_so=librunjob_client.so.1
+RM_launch_helper=mpir
+RM_signal_for_kill=SIGINT|SIGINT
+RM_fail_detection=false
+RM_launch_str=%o --lmonsharedsec=%s --lmonsecchk=%c
