--- a/test/src/test.attach_1.in
+++ b/test/src/test.attach_1.in
@@ -62,6 +62,18 @@ if test "x$RM_TYPE" = "xRC_slurm" ; then
 elif test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   nohup $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
+elif test "x$RM_TYPE" = "xRC_bgqrm"; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
+  export PAMI_MAXCONTEXTS=1
+  export BG_SHAREDMEMSIZE=64
+  export PAMI_VERBOSE=1
+  $MPI_JOB_LAUNCHER_PATH --verbose 4 --np $NUMTASKS --exe `pwd`/hang_on_SIGUSR1@EXE@ --cwd `pwd` --env-all &
+elif test "x$RM_TYPE" = "xRC_bgq_slurm"; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
+  export PAMI_MAXCONTEXTS=1
+  export BG_SHAREDMEMSIZE=64
+  export PAMI_VERBOSE=1
+  $MPI_JOB_LAUNCHER_PATH -N$NUMNODES -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xRC_alps" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
