--- a/test/src/test.attach_1_mem_fetcher.in
+++ b/test/src/test.attach_1_mem_fetcher.in
@@ -27,56 +27,66 @@
 # Place, Suite 330, Boston, MA 02111-1307 USA
 #--------------------------------------------------------------------------------
 #
-#  Attach the tool to a running program, unlock the hang and 
-#  shut down BE daemons .
+#  Attach the tool to a running program and unlock the hang. 
 #
 #  Update Log:
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
+#        Dec 17 2009 DHA: Added minimum WAITAMOUNT
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 16 2008 DHA: Created file.
 #
- 
+
 RM_TYPE=@TEST_RMTP@
 NUMNODES=@NNODES@
 
-if test "x$RM_TYPE" = "xRC_bglrm" \
-     -o "x$RM_TYPE" = "xRC_bgprm" \
-     -o "x$RM_TYPE" = "xRC_bgqrm" \
-     -o "x$RM_TYPE" = "xRC_bgq_slurm" \
-     -o "x$RM_TYPE" = "xRC_orte" \
-     -o "x$RM_TYPE" = "xRC_alps" ; then
+if test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then
   rm -f nohup.out
-  echo "[LMON FE] Test Not Implemented Yet"
-  exit 1
 fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
+
 WAITAMOUNT=$NUMNODES 
+if test $NUMNODES -lt 10 ; then 
+  WAITAMOUNT=10
+fi 
+
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
-export LMON_FE_SHUTDOWNBE_TEST=1
+
 
 if test "x$RM_TYPE" = "xRC_slurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then 
-  $MPI_JOB_LAUNCHER_PATH -verbose 0 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
+elif test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
+  nohup $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
+elif test "x$RM_TYPE" = "xRC_bgqrm"; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
+  export PAMI_MAXCONTEXTS=1
+  export BG_SHAREDMEMSIZE=64
+  $MPI_JOB_LAUNCHER_PATH --verbose 4 --np $NUMTASKS --exe `pwd`/hang_on_SIGUSR1@EXE@ --cwd `pwd` --env-all &
+elif test "x$RM_TYPE" = "xRC_bgq_slurm"; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
+  export PAMI_MAXCONTEXTS=1
+  export BG_SHAREDMEMSIZE=64
+  $MPI_JOB_LAUNCHER_PATH -N$NUMNODES -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xRC_alps" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xRC_orte" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
-  $MPI_JOB_LAUNCHER_PATH -gmca orte_enable_debug_cospawn_while_running 1 -np $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
+  $MPI_JOB_LAUNCHER_PATH -mca debugger mpirx -np $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 else
   echo "This RM is not supported yet" 
 fi
- 
+
 PID=`echo $!` 
- 
+
 sleep $WAITAMOUNT #wait until the job gets stalled 
- 
-fe_attach_smoketest@EXE@ $PID `pwd`/be_kicker@EXE@ $SIGNUM 60
- 
+
+fe_attach_smoketest@EXE@ $PID `pwd`/be_mem_fetcher@EXE@ $SIGNUM 
+
 sleep $WAITAMOUNT
+
