look for config files in $prefix if the LMON_PREFIX environment variable is not set

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,3 +39,4 @@
 
 SUBDIRS         = tools launchmon test
 EXTRA_DIST      = config/ap README.ERROR_HANDLING package.conf bootstrap
+ACLOCAL_AMFLAGS = -I config
