--- a/launchmon/src/linux/lmon_api/Makefile.am
+++ b/launchmon/src/linux/lmon_api/Makefile.am
@@ -29,6 +29,7 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
+##        Jun 01 2012 DHA: Merged with the 0.8-middleware-support branch.
 ##        Nov 28 2011 DHA: Added MPI-tool sync layer.
 ##        Jun 12 2008 DHA: Added header files to the dependency list
 ##                         of lmonfeapi_la_SOURCES.
@@ -52,19 +53,26 @@ INCLUDES                     = -I@ARCHHEADER@ \
                                -I.. -I../.. \
                                -I$(top_srcdir)/@COMMLOC@
 
-lib_LTLIBRARIES              = libmonbeapi.la libmonfeapi.la
+lib_LTLIBRARIES              = libmonbeapi.la libmonfeapi.la libmonmwapi.la
 
 libmonfeapi_la_SOURCES       = lmon_fe.cxx \
                                lmon_lmonp_msg.cxx \
+                               lmon_coloc_spawner.cxx 
                                lmon_say_msg.cxx \
                                ../../sdbg_rm_map.cxx \
                                ../../sdbg_self_trace.cxx \
                                ../../sdbg_opt.cxx \
+                               ../sdbg_rsh_spawner.cxx \
+                               lmon_coloc_spawner.hxx \
+                               ../sdbg_rsh_spawner.hxx \
+                               ../../lmon_api/lmon_api_std.h \
                                ../../lmon_api/lmon_fe.h \
+                               ../../lmon_api/lmon_proctab.h \
                                ../../lmon_api/lmon_lmonp_msg.h \
                                ../../sdbg_opt.hxx \
                                ../../sdbg_rm_map.hxx \
-                               ../../lmon_api/lmon_say_msg.hxx
+                               ../../lmon_api/lmon_say_msg.hxx \
+                               ../../sdbg_base_spawner.hxx 
 
 libmonfeapi_la_CFLAGS        = $(AM_CFLAGS)
 libmonfeapi_la_CXXFLAGS      = $(AM_CXXFLAGS)
@@ -78,13 +86,23 @@ libmonfeapi_la_LDFLAGS       = -L$(top_srcdir)/@COMMLOC@ \
 libmonfeapi_la_LIBADD        = @LIBPTHREAD@ @LIBCOMM@ @LIBGCRYPT@ @LIBGPGERR@ @LIBRT@
 
 libmonbeapi_la_SOURCES       = lmon_be.cxx \
+                               lmon_daemon_internal.cxx \
                                lmon_be_comm.cxx \
+                               lmon_coloc_spawner.cxx \
                                lmon_lmonp_msg.cxx \
                                lmon_say_msg.cxx \
                                lmon_be_sync_mpi.cxx \
                                lmon_be_sync_mpi_generic.cxx \
                                lmon_be_sync_mpi_bg.cxx \
-                               lmon_be_sync_mpi_bgq.cxx
+                               lmon_be_sync_mpi_bgq.cxx \
+                               lmon_coloc_spawner.hxx \
+                               lmon_daemon_internal.hxx \
+                               ../../lmon_api/lmon_api_std.h \
+                               ../../lmon_api/lmon_be.h \
+                               ../../lmon_api/lmon_proctab.h \
+                               ../../lmon_api/lmon_lmonp_msg.h \
+                               ../../lmon_api/lmon_say_msg.hxx \
+                               ../../sdbg_base_spawner.hxx
 
 libmonbeapi_la_CFLAGS        = $(AM_CFLAGS)
 libmonbeapi_la_CXXFLAGS      = $(AM_CXXFLAGS)
@@ -96,3 +114,35 @@ libmonbeapi_la_LDFLAGS       = -L$(top_srcdir)/@COMMLOC@ \
                                -version-info @LMON_CURRENT@:@LMON_REVISION@:@LMON_AGE@
 
 libmonbeapi_la_LIBADD        = @LIBCOMM@ @LIBGCRYPT@ @LIBGPGERR@
+
+
+#
+# Middleware API
+#
+libmonmwapi_la_SOURCES       = lmon_mw.cxx \
+                               lmon_daemon_internal.cxx \
+                               lmon_lmonp_msg.cxx \
+                               lmon_say_msg.cxx \
+                               lmon_coloc_spawner.cxx \
+                               ../sdbg_rsh_spawner.cxx \
+                               lmon_coloc_spawner.hxx \
+                               lmon_daemon_internal.hxx \
+                               ../sdbg_rsh_spawer.hxx \
+                               ../../lmon_api/lmon_api_std.h \
+                               ../../lmon_api/lmon_mw.h \
+                               ../../lmon_api/lmon_proctab.h \
+                               ../../lmon_api/lmon_lmonp_msg.h \
+                               ../../lmon_api/lmon_say_msg.hxx \
+                               ../../sdbg_base_spawner.hxx
+
+libmonmwapi_la_CFLAGS        = $(AM_CFLAGS)
+
+libmonmwapi_la_CXXFLAGS      = $(AM_CXXFLAGS)
+
+libmonmwapi_la_LDFLAGS       = -L$(top_srcdir)/@COMMLOC@ \
+                               -L$(top_srcdir)/@GCRYPTLOC@ \
+                               -L$(top_srcdir)/@GPGERRLOC@ \
+                               $(AM_LDFLAGS) \
+                               -version-info @LMON_CURRENT@:@LMON_REVISION@:@LMON_AGE@
+
+libmonmwapi_la_LIBADD        = @LIBCOMM@ @LIBGCRYPT@ @LIBGPGERR@
