fixes to port this merge to linux clusters with slurm

--- a/package.conf
+++ b/package.conf
@@ -7,6 +7,7 @@
 # The LLNL's package configuration script for LaunchMON
 #
 # Update:
+#         Jun 07 2012 DHA: Updated for 1.0 release  
 #         Oct 27 2010 DHA: Updated for 0.7.2 official release  
 #                          of 0.7
 #         Jul 21 2010 DHA: Updated for 0.7.2beta 
@@ -18,9 +19,9 @@
 #
 #
 
-_vers=0.7.2
+_vers=1.0.0
 PKG_NAME=launchmon-${_vers}
-PKG_VERSION=14
+PKG_VERSION=15
 PKG_SECTION=tools
 PKG_SHORT_DESCRIPTION="LaunchMON: Tool daemon launching infrastructure v${_vers}"  
 PKG_MAINTAINER="Dong H. Ahn <ahn1@llnl.gov>"
@@ -42,7 +43,7 @@ PKG_doc="LaunchMON doc: ${prefix}/man/man3/LMON_fe_launchAndSpawnDaemons.3"
 pkg_build()
 { 
 
-  ./configure --prefix=$prefix --with-rm=slurm 
+  ./configure --prefix=$prefix --with-test-rm=slurm --with-mw-hostlist=atlas544:atlas1088
   make 
 
   return 0
