--- a/test/src/test.attach_4_kill.in
+++ b/test/src/test.attach_4_kill.in
@@ -31,6 +31,7 @@
 #  and kill the BE daemons.
 #
 #  Update Log:
+#        Jun 05 2012 DHA: Added subtest support
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Dec 17 2009 DHA: Added tminimum waittime
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
@@ -76,7 +77,7 @@ PID=`echo $!`
  
 sleep $WAITAMOUNT #wait until the job gets stalled 
  
-fe_attach_smoketest@EXE@ $PID `pwd`/be_kicker@EXE@ $SIGNUM 60
+fe_attach_smoketest@EXE@ $PID `pwd`/be_kicker@EXE@ $SIGNUM 1
  
 sleep $WAITAMOUNT
 
