--- a/test/src/test.launch_mw_1_hostlist.in
+++ b/test/src/test.launch_mw_1_hostlist.in
@@ -31,10 +31,17 @@
 #  one daemon per node, which unlocks the initial hang of all tasks.
 #
 #  Update Log:
+#        Jun 04 2012 DHA: Adjust the test script to 1.0 testing environment.
 #        Aug 03 2010 DHA: Created file.
 #
 
-RM_TYPE=@RMTP@
+export RM_TYPE=@TEST_RMTP@
+export MPI_JOB_LAUNCHER_PATH=@TJLPATH@
+export LMON_PREFIX=@LMONPREFIX@
+export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+export LMON_MW_HOSTLIST_TEST=1
+export LMON_MW_HOSTLIST=@LMONMWHL@
+
 NUMNODES=@NNODES@
 SIGNUM=18
 NOHUP=""
@@ -45,12 +52,7 @@ fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 
-export LMON_PREFIX=@LMONPREFIX@
-export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
-export LMON_MW_HOSTLIST_TEST=1
-export LMON_MW_HOSTLIST=@LMONMWHL@
-
-$NOHUP fe_launch_middleware@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/mw_comm_helper@EXE@ `pwd`/be_kicker_mw@EXE@ 
+$NOHUP fe_launch_middleware@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/mw_comm_helper@EXE@ `pwd`/be_kicker@EXE@ 
 
 if test -f nohup.out; then
   sleep $NUMNODES
