--- a/test/src/test.launch_mw_5_mixall.in
+++ b/test/src/test.launch_mw_5_mixall.in
@@ -31,12 +31,20 @@
 #  one daemon per node, which unlocks the initial hang of all tasks.
 #
 #  Update Log:
+#        Jun 05 2012 DHA: Added subtest support.
+#        Jun 04 2012 DHA: Adjust the test script to 1.0 testing environment.
 #        Aug 05 2010 DHA: Created file.
 #
 
-RM_TYPE=@RMTP@
-NUMNODES=@NNODES@
+export RM_TYPE=@TEST_RMTP@
+export MPI_JOB_LAUNCHER_PATH=@TJLPATH@
+export LMON_PREFIX=@LMONPREFIX@
+export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+export LMON_MW_MIX_TEST=1
+export LMON_MW_HOSTLIST=@LMONMWHL@
+
 SIGNUM=18
+NUMNODES=@NNODES@
 NOHUP=""
 if test "x$RM_TYPE" = "xbgrm" ; then
   NOHUP=nohup
@@ -45,12 +53,7 @@ fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 
-export LMON_PREFIX=@LMONPREFIX@
-export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
-export LMON_MW_MIX_TEST=1
-export LMON_MW_HOSTLIST=@LMONMWHL@
-
-$NOHUP fe_launch_middleware@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/mw_comm_helper@EXE@ `pwd`/be_kicker_mw@EXE@ $SIGNUM 1
+$NOHUP fe_launch_middleware@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/mw_comm_helper@EXE@ `pwd`/be_kicker@EXE@ $SIGNUM 2
 
 if test -f nohup.out; then
   sleep $NUMNODES
